# django_websocket

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  README.md  dump.rdb  manage.py  pyproject.toml
chat/: constants.py  consumers.py  forms.py  models.py  notification.py  routing.py  urls.py  validators.py  views.py
chat/migrations/: 0001_initial.py  0002_auto_20210501_0153.py  0003_rename_thread_chat_room.py  0004_remove_chat_has_read.py
chat/static/chat/js/: chat-websocket.js
chat/templates/chat/: base.html  chatroom_detail.html  chatroom_form.html
contact/: urls.py  views.py
django_websocket/: asgi.py  urls.py  wsgi.py
django_websocket/settings/: base.py  dev.py  production.py
tools/: gen_secret_key.py
